--- a/gold-zakat-calculator/app/globals.css
+++ b/gold-zakat-calculator/app/globals.css
@@ -4,26 +4,12 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
@@ -36,7 +22,9 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background-image: url("/background.jpg"); /* Replace with your background image */
+  color: rgb(var(--foreground-rgb));    
+  /* background-color: #8EC5FC;
+  background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
